# Project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  live_status.txt  pyproject.toml  requirements.txt  results_ae.csv  results_ae_grid.csv
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
chungam/: Lstm_traffic_prediction.py  autoencoder_prediction.py  braintumor_predition.py  catvsdog.py  catvsdog_1.py  results_cnn.csv  test_examples_smoke.py
chungam/yunseo/: ONsensE-prototype.m4a  README.md  index.html
docs/: ONsensE-prototype.m4a  README.md  index.html
examples/: __init__.py
examples/timeseries/: README.md  __init__.py  autoencoder_prediction.py  lstm_traffic_prediction.py
examples/vision/: README.md  __init__.py  braintumor_prediction.py  catvsdog.py
src/project/: __init__.py
tests/: test_add.py
